# TegeViewer

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  cameracontroldialog.cpp  cameracontroldialog.h  cameracontroldialog.ui  cvvideocapture.cpp  cvvideocapture.h  define.h  graphdialog.cpp  graphdialog.h  graphdialog.ui  infodock.cpp  infodock.h  infodock.ui  main.cpp  mainwindow.cpp  mainwindow.h  minmaxdialog.cpp  minmaxdialog.h  minmaxdialog.ui  myimagescene.cpp  myimagescene.h  myimageview.cpp  myimageview.h  resouce.qrc  utility.cpp  utility.h  uvccamera.cpp  uvccamera.h
